* Use the new rsync --dirs-update option in sysvol-sync.sh (Bug #33751)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50719 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/control
+++ b/services/univention-samba4/debian/control
@@ -41,6 +41,7 @@ Package: univention-samba4-sysvol-sync
 Architecture: all
 Depends: ${misc:Depends},
  univention-config-registry,
+ rsync (>=3.0.7-2)
 Breaks: univention-samba4 ( << 1.0.139-2)
 Description: UCS - Samba4 sysvol synchronization
  This package contains the scripts and configuration
