--- a/doc/errata/staging/2014-05-26-univention-management-console-frontend.yaml
+++ b/doc/errata/staging/2014-05-26-univention-management-console-frontend.yaml
@@ -2,10 +2,11 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-management-console-frontend
-fix: 3.0.152-26.824.201405261304
+fix: 3.0.152-27.826.201405301357
 version: [2]
 desc: |
   This update fixes the following issues:
   * The UMC grid can now allow the execution of an action even though some of
     the selected items are not executable w.r.t. to the action.
-bug: [34965]
+  * A function has been added to reload the modules of the overview tab on the fly.
+bug: [34965, 34243]
