--- a/doc/errata/staging/2014-06-04-gnutls26.yaml
+++ b/doc/errata/staging/2014-06-04-gnutls26.yaml
@@ -8,5 +8,6 @@ desc: |
  Joonas Kuorilehto discovered that GNU TLS performed insufficient
  validation of session IDs during TLS/SSL handshakes. A malicious
  server could use this to execute arbitrary code or perform denial
+ of service.
 cve:
  - CVE-2014-3466
