--- a/doc/errata/staging/2014-05-28-univention-samba4.yaml
+++ b/doc/errata/staging/2014-05-28-univention-samba4.yaml
@@ -2,12 +2,13 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-samba4
-fix: 3.0.39-22.576.201406031807
+fix: 3.0.39-23.577.201406041610
 version: [1,2]
 desc: |
     This updates fixes the following issues in univention-samba4:
     * Clean up /var/lib/samba/private before new provision (relevant for UCS@school Slave PDCs)
-    * Preserve /var/lib/samba/*, only clear private subdir before re-join
     * Modifications of access rights of GPOs could get reset by the sysvol
       replication. This affected directories in the sysvol share.
-bug: [32246,35000,33751]
+    * Preserve rIDNextRID during re-join and provision
+    * Preserve /var/lib/samba/*, only clear private subdir before re-join
+bug: [32246,33751,34754,35000]
