fix syntax (Bug #32246)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50898 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-05-28-univention-samba4.yaml
+++ b/doc/errata/staging/2014-05-28-univention-samba4.yaml
@@ -6,7 +6,8 @@ fix: 3.0.39-23.577.201406041610
 version: [1,2]
 desc: |
     This updates fixes the following issues in univention-samba4:
-    * Clean up /var/lib/samba/private before new provision (relevant for UCS@school Slave PDCs)
+    * Clean up /var/lib/samba/private before new provision (relevant for 
+      UCS@school Slave PDCs)
     * Modifications of access rights of GPOs could get reset by the sysvol
       replication. This affected directories in the sysvol share.
     * Preserve rIDNextRID during re-join and provision
