--- a/doc/errata/published/2014-06-06-openssl.yaml
+++ b/doc/errata/published/2014-06-06-openssl.yaml
@@ -6,17 +6,17 @@ src: openssl
 fix: 0.9.8o-4.76.201406060850
 desc: |
  This update fixes multiple security issues in OpenSSL:
- * ECSDA nonces can be retrieved through side channel attacks on cache 
+ * ECSDA nonces can be retrieved through side channel attacks on cache
    timings
- * A buffer overflow in processing DTLS fragments could lead to the 
-   execution of arbitrary code or denial of service ()
- * The processing of DTLS hello packets is susceptible to denial of 
+ * A buffer overflow in processing DTLS fragments could lead to the
+   execution of arbitrary code or denial of service
+ * The processing of DTLS hello packets is susceptible to denial of
    service
- * Carefully crafted handshakes can force the use of weak keys, 
-   resulting in potential man-in-the-middle attacks. This requires a 
+ * Carefully crafted handshakes can force the use of weak keys,
+   resulting in potential man-in-the-middle attacks. This requires a
    vulnerable TLS client and TLS server. The OpenSSL release used in
    UCS 3.2 is not only affected when acting as a TLS client.
- * The implementation of anonymous ECDH ciphersuites is suspectible 
+ * The implementation of anonymous ECDH ciphersuites is susceptible
    to denial of service
 note:
 cve:
