* Bug #34570: Change UNIVENTION_NTP nagios check to compare ntp server time by using the check_time nagios plugin. The previous check also asked for ntp server configuration options, which are not relevant for this check and, since UCS 3.2 errata 20, are not allowed to be queried from external sources.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50951 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios/usr/share/nagios-plugins/templates-univention/univention.cfg
+++ b/nagios/univention-nagios/usr/share/nagios-plugins/templates-univention/univention.cfg
@@ -144,3 +144,9 @@ define command{
 	command_name    check_univention_smtp
 	command_line    /usr/lib/nagios/plugins/check_univention_smtp
 }
+
+# 'check_univention_ntp' command definition
+define command{
+	command_name    check_univention_ntp
+	command_line    /usr/lib/nagios/plugins/check_time -H '$HOSTNAME$' -w '$ARG1$' -c '$ARG2$'
+}
