--- a/doc/errata/staging/2014-05-22-univention-management-console-module-udm.yaml
+++ b/doc/errata/staging/2014-05-22-univention-management-console-module-udm.yaml
@@ -2,9 +2,11 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-management-console-module-udm
-fix: 4.0.97-22.446.201405222339
+fix: 4.0.97-23.447.201406111551
 version: [2]
 desc: |
   This update fixes the following issues:
   * Upon opening a non-existent LDAP object an error message is shown instead of a traceback.
-bug: [34246]
+  * The property that is used to in the first column of the grid ("Name") is
+    now configurable via UCR
+bug: [34246, 34200]
