--- a/doc/errata/staging/2014-06-11-rsync.yaml
+++ b/doc/errata/staging/2014-06-11-rsync.yaml
@@ -6,6 +6,6 @@ fix: 3.0.7-2.49.201406111721
 version: [1,2]
 desc: |
     The parameter --dirs-update was introduced with erratum 121. When using this
-    parameter it could happen that the permissions were not transferred like
+    parameter it could happen that the permissions were not transferred as
     expected. This error has been fixed.
 bug: [35105]
