univention-system-setup (7.0.69-8) unstable; urgency=low
  * instead of reading setup script output from pipe, directly write it to the
    setup log to prevent running setup scripts from receiving SIGPIPE when
    the module process terminates unexpectedly (Bug #34105)


univention-management-console (6.0.24-6) unstable; urgency=low

  * don't let UMC module processes die by timeout if the time delta seems to be
    unnatural (e.g. due to huge jumps in wall-clock time through NTP updates)
    (Bug #34105)
  * fixed minor typo in log output



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51039 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-05-30-univention-management-console.yaml
+++ b/doc/errata/staging/2014-05-30-univention-management-console.yaml
@@ -7,4 +7,5 @@ version: [2]
 desc: |
   This update fixes the following issues:
   * The internal cache of UMC modules in the UMC Server is now invalidated before they are requested.
-bug: [34243]
+  * Changes of system clock (e.g. due to NTP updates) will not make UMC processes die by timeout anymore.
+bug: [34243, 34105]
