--- a/doc/errata/staging/2014-06-17-univention-samba4.yaml
+++ b/doc/errata/staging/2014-06-17-univention-samba4.yaml
@@ -1,11 +1,11 @@
 product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
-src: univention-samba
-fix: 8.0.18-3.468.201406171247
+src: univention-samba4
+fix: 3.0.39-24.578.201406171255
 version: [1,2]
 desc: |
-    This updates fixes the following issues in univention-samba:
+    This updates fixes the following issues in univention-samba4:
     * In Samba 3.6 and older the execution right in the ACL was not checked,
       so a client could execute a file even if it did not have execute rights 
       on the file. In Samba 4.0, this has been fixed. To re-establishing the
