* Update to UCS 4.0 (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51133 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-config-registry/debian/control
+++ b/base/univention-config-registry/debian/control
@@ -13,7 +13,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  python-ipaddr,
  python-all
 Standards-Version: 3.5.2
-XS-Python-Version: 2.6
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-config-registry
 Architecture: all
