* Update to UCS 4.0 (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51139 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-policy/debian/control
+++ b/base/univention-policy/debian/control
@@ -13,7 +13,7 @@ Build-Depends: debhelper,
  libunivention-config-dev,
  python-all,
  python-support (>= 0.90),
-# ucslint-univention
+ ucslint-univention
 
 Package: libunivention-policy0
 Architecture: any
