* Activate ucslint (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51141 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-debug/debian/control
+++ b/base/univention-debug/debian/control
@@ -8,7 +8,8 @@ Build-Depends: debhelper (>= 7.0.50~),
  automake,
  libtool,
  python-all-dev,
- python-support
+ python-support,
+ ucslint-univention
 
 Package: libunivention-debug1
 Architecture: any
