* Activate ucslint (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51142 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-policy/debian/rules
+++ b/base/univention-policy/debian/rules
@@ -46,5 +46,5 @@ override_dh_auto_configure:
 	automake --add-missing
 	dh_auto_configure
 
-#override_dh_auto_test:
-#	ucslint # Bug (22498)
+override_dh_auto_test:
+	ucslint
