updated 2014-06-11-univention-directory-manager-modules.yaml (Bug #34250)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51150 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-06-11-univention-directory-manager-modules.yaml
+++ b/doc/errata/staging/2014-06-11-univention-directory-manager-modules.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-directory-manager-modules
-fix: 9.0.77-1.1200.201406131407
+fix: 9.0.77-2.1201.201406171805
 version: [2]
 desc: |
  This update fixes several issues:
@@ -12,4 +12,4 @@ desc: |
    the frontend grid configurable.
  * Removed the input field Organisation from the group Personal information 
    and added it to the group Organisation
-bug: [33120, 34037, 34200, 28630]
+bug: [33120, 34037, 34200, 34250, 28630]
