* Add univentiondebug and ldap lib to linker call (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51154 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-policy/tools/Makefile.am
+++ b/base/univention-policy/tools/Makefile.am
@@ -6,6 +6,6 @@ INCLUDES = -I$(top_srcdir)/include
 
 bin_PROGRAMS = univention_policy_result
 
-LDADD = ../lib/libuniventionpolicy.la
+LDADD = ../lib/libuniventionpolicy.la -luniventiondebug -luniventionconfig -lldap
 
 univention_policy_result_SOURCES = univention_policy_result.c ../lib/internal.h
