--- a/doc/errata/staging/2014-06-17-univention-apache.yaml
+++ b/doc/errata/staging/2014-06-17-univention-apache.yaml
@@ -2,10 +2,13 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-apache
-fix: 6.0.16-6.195.201406171832
+fix: 6.0.16-7.196.201406181556
 version: [2]
 desc: |
     This updates fixes the following issues:
     * The URL of the Univention App Center has changed. Therefore, the corresponding
       links in the UCS overview page have been adapted.
-bug: [34864]
+    * Links to local web interfaces of installed Apps got placed on top of the
+      UCS overview page if no priority was specified in UCR. They will now be positioned
+      at the end.
+bug: [34864, 33750]
