--- a/base/univention-config-registry/debian/rules
+++ b/base/univention-config-registry/debian/rules
@@ -31,7 +31,7 @@
 # <http://www.gnu.org/licenses/>.
 
 %:
-	dh $@
+	dh $@ --with 'python_support'
 
 override_dh_auto_clean:
 	[ ! -f Makefile ] || $(MAKE) maintainer-clean
