--- a/doc/errata/staging/2014-06-11-univention-directory-manager-modules.yaml
+++ b/doc/errata/staging/2014-06-11-univention-directory-manager-modules.yaml
@@ -6,10 +6,13 @@ fix: 9.0.77-2.1201.201406171805
 version: [2]
 desc: |
  This update fixes several issues:
- * Removing all Nagios services or superior hosts from a computer
-   object no longer yields an error.
+ * Removing all Nagios services from a computer object no longer yields an
+   error.
+ * Same for Nagios hosts.
+ * Adding a DNS reverse zone to a computer object while removing an IP address
+   no longer yields an error as well.
  * Documentation for a UCR variable added that makes the name of an object in
    the frontend grid configurable.
  * Removed the input field Organisation from the group Personal information 
-   and added it to the group Organisation
+   and added it to the group Organisation.
 bug: [33120, 34037, 34200, 34250, 28630]
