* Added multiarch support (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51185 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-config-registry/debian/rules
+++ b/base/univention-config-registry/debian/rules
@@ -44,7 +44,7 @@ override_dh_auto_configure:
 	aclocal
 	autoconf
 	automake --add-missing
-	./configure --prefix=/usr
+	dh_auto_configure
 
 override_dh_auto_test:
 	ucslint
