--- a/doc/errata/staging/2014-06-17-univention-apache.yaml
+++ b/doc/errata/staging/2014-06-17-univention-apache.yaml
@@ -6,9 +6,9 @@ fix: 6.0.16-7.196.201406181556
 version: [2]
 desc: |
     This updates fixes the following issues:
-    * The URL of the Univention App Center landing page has changed. Therefore, the corresponding
-      links in the UCS overview page have been adapted.
-    * Links to local web interfaces of installed Apps got placed on top of the
-      UCS overview page if no priority was specified in UCR. They will now be positioned
-      at the end.
+    * The URL of the Univention App Center landing page has changed. Therefore,
+      the corresponding links in the UCS overview page have been adapted.
+    * Links to local web interfaces of installed Apps were placed on top of the
+      UCS overview page if no priority was specified via UCR. They will now be
+      positioned at the end.
 bug: [34864, 33750]
