univention-directory-manager-modules (10.0.0-1) unstable; urgency=low
  * update to UCS 4.0 (Bug #35146)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51224 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/rules
+++ b/management/univention-directory-manager-modules/debian/rules
@@ -64,4 +64,4 @@ override_dh_install:
 	sed -i "s/@%@package_version@%@/${version}/g;s/@%@copyright_lastyear@%@/${copyrightyear}/" debian/python-univention-directory-manager-cli/usr/share/pyshared/univention/admincli/admin.py
 
 %:
-	dh $@
+	dh $@ --with 'python_support'
