--- a/management/univention-directory-manager-modules/debian/control
+++ b/management/univention-directory-manager-modules/debian/control
@@ -5,10 +5,10 @@ Maintainer: Univention GmbH <packages@univention.de>
 Standards-Version: 3.5.5
 Build-Depends: debhelper,
  ucslint-univention,
- python2.6-dev,
+ python2.7-dev,
  python-support,
  univention-config-dev
-XS-Python-Version: 2.6
+XS-Python-Version: 2.6, 2.7
 
 Package: python-univention-directory-manager
 Architecture: all
