--- a/doc/errata/staging/2014-06-18-univention-updater.yaml
+++ b/doc/errata/staging/2014-06-18-univention-updater.yaml
@@ -2,9 +2,13 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-updater
-fix: 9.0.41-1.1256.201406181016
+fix: 9.0.41-2.1257.201406251547
 version: [2]
 desc: |
-  The local UCR variable uuid/license is now removed if the key ID
-  is missing in the UCS license. 
-bug: [34809]
+  This errata update fixes serveral issues:
+  * The local UCR variable uuid/license is now removed if the key ID is missing
+    in the UCS license.
+  * univention-add-app no longer registers a link in the UCS startsite and
+    removes the component again if called with --master (just like the App
+    Center module)
+bug: [34809, 35022]
