--- a/doc/errata/staging/2014-06-11-univention-directory-manager-modules.yaml
+++ b/doc/errata/staging/2014-06-11-univention-directory-manager-modules.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-directory-manager-modules
-fix: 9.0.76-5.1202.201406191713
+fix: 9.0.76-6.1204.201406261244
 version: [2]
 desc: |
  This update fixes several issues:
@@ -15,4 +15,5 @@ desc: |
    the frontend grid configurable.
  * Removed the input field Organisation from the group Personal information 
    and added it to the group Organisation.
-bug: [33120, 34037, 34200, 34250, 28630]
+ * Added new option to share-userquota policy: Reapply quota on every login
+bug: [33120, 34037, 34200, 34250, 28630, 33174]
