--- a/base/univention-firewall/debian/rules
+++ b/base/univention-firewall/debian/rules
@@ -3,7 +3,7 @@
 # Univention Firewall
 #  rules file for the debian package
 #
-# Copyright 2007-2013 Univention GmbH
+# Copyright 2007-2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -42,5 +42,5 @@ override_dh_auto_test:
 	dh_auto_test
 
 %:
-	dh $@
+	dh $@ --with 'python_support'
 
