* Update to UCS 4.0 (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51329 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-licence/debian/rules
+++ b/base/univention-licence/debian/rules
@@ -3,7 +3,7 @@
 # Univention License
 #  rules file for the debian package
 #
-# Copyright 2004-2012 Univention GmbH
+# Copyright 2004-2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -31,7 +31,7 @@
 # <http://www.gnu.org/licenses/>.
 
 %:
-	dh $@
+	dh $@ --with 'python_support'
 
 override_dh_auto_clean:
 	./dh_doxygen clean
@@ -46,7 +46,7 @@ override_dh_auto_configure:
 	aclocal
 	autoconf
 	automake --add-missing
-	./configure --prefix=/usr
+	dh_auto_configure
 	dh_auto_configure --buildsystem=python_distutils
 
 override_dh_auto_build:
