* Update to UCS 4.0 (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51341 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-python-heimdal/debian/control
+++ b/base/univention-python-heimdal/debian/control
@@ -3,12 +3,13 @@ Section: python
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper (>= 7.0.50~),
- python2.6-dev,
+ python-all-dev,
  python-support (>> 1.0.10),
  heimdal-dev,
  sharutils,
  ucslint-univention
 Standards-Version: 3.8.2
+XS-Python-Version: 2.6,2.7
 
 Package: python-univention-heimdal
 Architecture: any
