* Update to UCS 4.0 (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51344 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-quota/debian/control
+++ b/base/univention-quota/debian/control
@@ -7,8 +7,9 @@ Build-Depends: debhelper (>> 3.0.0),
  univention-config-dev,
  univention-management-console-dev,
  python-all,
+ python-all-dev,
  python-support (>= 0.90)
-XS-Python-Version: 2.6
+XS-Python-Version: 2.6,2.7
 
 Package: univention-quota
 Architecture: all
