* Update to UCS 4.0 (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51352 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-ssh/debian/control
+++ b/base/univention-ssh/debian/control
@@ -10,7 +10,7 @@ Package: univention-ssh
 Architecture: all
 Conflicts: univention-join (<< 0.2)
 Depends: ${misc:Depends},
- python,
+ python2.7,
  univention-config,
  rsync,
  openssh-client
