--- a/base/univention-ssh/univention-ssh.in
+++ b/base/univention-ssh/univention-ssh.in
@@ -1,10 +1,10 @@
-#!/usr/bin/python
+#!/usr/bin/python2.7
 # -*- coding: utf-8 -*-
 #
 # Univention SSH
 #  ssh wrapper script
 #
-# Copyright 2004-2012 Univention GmbH
+# Copyright 2004-2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -68,7 +68,7 @@ def display_help(out=sys.stdout):
 	if cmd == 'univention-ssh':
 		text = '''
 		%(cmd)s: internal managing tool for UCS clients
-		Copyright (c) 2001-2012 Univention GmbH, Germany
+		Copyright (c) 2001-2014 Univention GmbH, Germany
 
 		Syntax:
 		  %(cmd)s [-timeout timeout] <pwd_file> [options] [user@]host <command>
@@ -95,7 +95,7 @@ def display_help(out=sys.stdout):
 	else:
 		text = '''
 		%(cmd)s: internal managing tool for UCS clients
-		Copyright (c) 2001-2012 Univention GmbH, Germany
+		Copyright (c) 2001-2014 Univention GmbH, Germany
 
 		Syntax:
 		  %(cmd)s [-timeout timeout] <pwd_file> [options] files [user@]host:[path]
