--- a/base/univention-base-files/debian/control
+++ b/base/univention-base-files/debian/control
@@ -1,6 +1,6 @@
 Source: univention-base-files
 Section: univention
-Priority: optional
+Priority: important
 Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper (>= 7.0.50~),
  univention-config-dev,
