--- a/test/ucs-ec2-tools/examples/jenkins/autotest-110-update-3.2-to-4.0-appupdate-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-110-update-3.2-to-4.0-appupdate-master-s3.cfg
@@ -2,8 +2,8 @@
 # These settings can be overwritten by the instance
 logfile: autotest-110-master-s3.log
 
-# AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 3 - ami-9f30f0e8
-ec2_ami: ami-9f30f0e8
+# AMI: Univention Corporate Server (UCS) 3.1 (official image) rev. 5 (ami-24f0fa50)
+ec2_ami: ami-24f0fa50
 
 # EC2 region
 ec2_region: eu-west-1
@@ -41,15 +41,26 @@ profile:
  packages_install="univention-samba univention-dhcp univention-printserver cups univention-squid univention-nagios-server univention-pkgdb"
  packages_remove=""
 command1:
- . utils.sh; basic_setup
+ echo -e "#!/bin/sh\nroute del default ; route add default gw 10.210.216.13" >>/etc/network/if-up.d/z_route
+ chmod +x /etc/network/if-up.d/z_route
+ /etc/network/if-up.d/z_route
+ sleep 10 # just wait a few seconds to give the amazone cloud some time
+ ucr set updater/identify="UCS (EC2 Test)" update/check/cron/enabled=false update/check/boot/enabled=false
 command2:
- . utils.sh; upgrade_to_latest
- . utils.sh; run_setup_join
+ univention-upgrade --noninteractive --ignoreterm --ignoressh
+ # Workaround for Bug #31561
+ sleep 10
+ univention-upgrade --noninteractive --ignoreterm --ignoressh
+ /usr/lib/univention-system-setup/scripts/setup-join.sh
+ ucr set apache2/startsite='ucs-overview/' # Bug #31682
+ for srv in univention-management-console-server univention-management-console-web-server apache2; do invoke-rc.d $srv restart; done
 command3:
  univention-license-import /root/autotest110.ldif
- . utils.sh; switch_to_test_app_center
- . utils.sh; install_apps
- . utils.sh; run_join_scripts
+ # Switch to Test App Center
+ ucr set repository/app_center/server=appcenter.test.software-univention.de
+ for app in APP_ID; do echo "$app" >>/var/cache/appcenter-installed.txt; done
+ LOCAL ssh -i ~/ec2/keys/tech.pem -t -t -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master110_IP] 'for app in APP_ID; do univention-add-app -a --latest $app; done'
+ univention-run-join-scripts
 command4:
  # Update to UCS 3.2
  ucr set repository/online/server=testing.univention.de
