Adapted autotest-09* for UCS 4.0  (Bug #35148)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51369 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-092-backup-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-092-backup-s3.cfg
@@ -43,7 +43,8 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
- . utils.sh; upgrade_to_latest_test_errata
+# upgrade to UCS 4.0
+ . utils.sh; upgrade_to_testing #instead of upgrade_to_latest_test_errata
  . utils.sh; run_setup_join
 command3:
  univention-license-import /root/autotest092.ldif
