--- a/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
@@ -43,7 +43,7 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
- . utils.sh; upgrade_to_latest_test_errata
+ . utils.sh; upgrade_to_testing #instead of upgrade_to_latest_test_errata
  . utils.sh; run_setup_join
  ucr set samba/debug/level=4
 command3:
