Adapted the unjoined-section for autotest-09* (Bug #35148)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51376 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-090-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-090-master-s3.cfg
@@ -43,8 +43,9 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
-# upgrade to UCS 4.0
- . utils.sh; upgrade_to_testing # instead of upgrade_to_latest_test_errata
+# Upgrade to UCS 4.0
+ . utils.sh; upgrade_to_testing
+# maybe also . utils.sh; upgrade_to_latest_test_errata
  . utils.sh; run_setup_join
 command3:
  univention-license-import /root/autotest090.ldif
