--- a/test/ucs-ec2-tools/examples/jenkins/autotest-092-backup-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-092-backup-s3.cfg
@@ -43,8 +43,9 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
-# upgrade to UCS 4.0
- . utils.sh; upgrade_to_testing #instead of upgrade_to_latest_test_errata
+# Upgrade to UCS 4.0
+ . utils.sh; upgrade_to_testing
+# maybe also utils.sh upgrade_to_latest_test_errata
  . utils.sh; run_setup_join
 command3:
  univention-license-import /root/autotest092.ldif
@@ -75,7 +76,9 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
- . utils.sh; upgrade_to_latest_test_errata
+# Upgrade to UCS 4.0
+ . utils.sh; upgrade_to_testing
+# maybe also . utils.sh; upgrade_to_latest_test_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
 command4:
