Adapted autotest-100-app-master-s3.cfg for UCS 4.0 (Bug #35148)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51395 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-100-app-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-100-app-master-s3.cfg
@@ -2,8 +2,8 @@
 # These settings can be overwritten by the instance
 logfile: autotest-100-master-s3.log
 
-# AMI: Univention Corporate Server (UCS) 3.2-1 (official image) rev. 1 - ami-661cec11
-ec2_ami: ami-661cec11
+# AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 3 - ami-9f30f0e8
+ec2_ami: ami-9f30f0e8
 
 # EC2 region
 ec2_region: eu-west-1
@@ -43,7 +43,9 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
- . utils.sh; upgrade_to_latest_errata
+# Upgrade to UCS 4.0
+ . utils.sh; upgrade_to_testing
+# maybe also . utils.sh; upgrade_to_latest_errata
  . utils.sh; run_setup_join
 command3:
  univention-license-import /root/autotest100.ldif
