Changed some comments for autotest-09* and 10* (Bug #35148)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51398 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-092-backup-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-092-backup-s3.cfg
@@ -45,7 +45,7 @@ command1:
 command2:
 # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
-# maybe also utils.sh upgrade_to_latest_test_errata
+# utils.sh upgrade_to_latest_test_errata
  . utils.sh; run_setup_join
 command3:
  univention-license-import /root/autotest092.ldif
@@ -78,7 +78,7 @@ command1:
 command2:
 # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
-# maybe also . utils.sh; upgrade_to_latest_test_errata
+# . utils.sh; upgrade_to_latest_test_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
 command4:
