--- a/test/ucs-ec2-tools/examples/jenkins/autotest-091-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-091-master-s4.cfg
@@ -45,7 +45,7 @@ command1:
 command2:
 # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
- # maybe also . utils.sh; upgrade_to_latest_test_errata
+# . utils.sh; upgrade_to_latest_test_errata
  . utils.sh; run_setup_join
 command3:
  univention-license-import /root/autotest091.ldif
