--- a/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
@@ -45,7 +45,7 @@ command1:
 command2:
 # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
-#maybe also . utils.sh; upgrade_to_latest_test_errata
+# . utils.sh; upgrade_to_latest_test_errata
  . utils.sh; run_setup_join
  ucr set samba/debug/level=4
 command3:
@@ -79,7 +79,7 @@ command1:
 command2:
 # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
-# maybe also . utils.sh; upgrade_to_latest_test_errata
+# . utils.sh; upgrade_to_latest_test_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
  ucr set samba/debug/level=4
