--- a/services/univention-ad-connector/debian/control
+++ b/services/univention-ad-connector/debian/control
@@ -60,7 +60,10 @@ Depends: ${misc:Depends},
  shell-univention-lib (>= 1.0.6),
  python-univention-lib (>= 1.0.25-1),
  univention-base-files,
- univention-management-console-module-adconnector (= ${binary:Version})
+ univention-management-console-module-adconnector (= ${binary:Version}) | univention-management-console-module-adconnector2 (= ${binary:Version}),
+ python-samba,
+ python-ldb,
+ samba-common-bin
 Recommends: univention-nagios-ad-connector,
  sqlite3
 Description: UCS - Modules for sync UCS and Active Directory
@@ -92,6 +95,24 @@ Description: UCS - AD-connector Exchange configuration
 Package: univention-management-console-module-adconnector
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends},
- univention-management-console-server,
+ univention-management-console-server
 Description: UMC module for Univention AD Connector
  This package contains the Univention AD Connector UMC module.
+ .
+ It is part of Univention Corporate Server (UCS), an
+ integrated, directory driven solution for managing
+ corporate environments. For more information about UCS,
+ refer to: http://www.univention.de/
+
+Package: univention-management-console-module-adconnector2
+Architecture: all
+Depends: ${misc:Depends},
+ univention-management-console-server
+Description: UMC module for Univention AD Connector
+ This package contains the Univention AD Connector UMC module.
+ .
+ It is part of Univention Corporate Server (UCS), an
+ integrated, directory driven solution for managing
+ corporate environments. For more information about UCS,
+ refer to: http://www.univention.de/
+
