Bug #34243: minor adaptations of YAML file
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51408 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-05-30-univention-management-console-module-appcenter.yaml
+++ b/doc/errata/staging/2014-05-30-univention-management-console-module-appcenter.yaml
@@ -6,7 +6,8 @@ fix: 3.0.51-22.256.201407011022
 version: [2]
 desc: |
   This update fixes the following issues:
-  * After a app (un)-installation the overview of UMC modules is reloaded immediately.
+  * After an app (un)-installation the overview of UMC modules is reloaded
+    immediately.
   * Improved performance: Applications are opened immediately when clicking on
     them from the App Gallery.
   * Improved performance: When new apps are added or existing apps' meta
