Adapted autotest-070-update-3.2-to-4.0-master-s3.cfg for UCS 4.0 (Bug #35148)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51412 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-070-update-3.2-to-4.0-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-070-update-3.2-to-4.0-master-s3.cfg
@@ -2,8 +2,8 @@
 # These settings can be overwritten by the instance
 logfile: autotest-070-master-s3.log
 
-# AMI: Univention Corporate Server (UCS) 3.1 (official image) rev. 5 (ami-24f0fa50)
-ec2_ami: ami-24f0fa50
+# AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 3 - ami-9f30f0e8
+ec2_ami: ami-9f30f0e8
 
 # EC2 region
 ec2_region: eu-west-1
@@ -41,38 +41,22 @@ profile:
  packages_install="univention-samba univention-mail-server univention-horde4 univention-dhcp univention-printserver cups univention-squid univention-bacula univention-nagios-server univention-pkgdb"
  packages_remove=""
 command1:
- echo -e "#!/bin/sh\nroute del default ; route add default gw 10.210.216.13" >>/etc/network/if-up.d/z_route
- chmod +x /etc/network/if-up.d/z_route
- /etc/network/if-up.d/z_route
- sleep 10 # just wait a few seconds to give the amazone cloud some time
- ucr set updater/identify="UCS (EC2 Test)" update/check/cron/enabled=false update/check/boot/enabled=false
+ . utils.sh; basic_setup
 command2:
- ucr set repository/online/component/errata3.1-1-test=true repository/online/component/errata3.1-1-test/unmaintained=true
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- # Workaround for Bug #31561
- sleep 10
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- /usr/lib/univention-system-setup/scripts/setup-join.sh
- ucr set apache2/startsite='ucs-overview/' # Bug #31682
- for srv in univention-management-console-server univention-management-console-web-server apache2; do invoke-rc.d $srv restart; done
+# ucr set repository/online/component/errata3.1-1-test=true repository/online/component/errata3.1-1-test/unmaintained=true
+ . utils.sh; upgrade_to_latest
+ . utils.sh; run_setup_join
 command3:
- # Update to UCS 3.2
- ucr set repository/online/server=testing.univention.de
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- # Workaround for Bug #31561
- sleep 10
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- univention-run-join-scripts
+# Update to UCS 4.0
+ . utils.sh; upgrade_to_latest
+ . utils.sh; run_join_scripts
 command4:
- ucr set repository/online/unmaintained=yes
- univention-install --yes ucs-test
- ucr set repository/online/unmaintained=no
+ . utils.sh; install_ucs_test
  reboot
  LOCAL sleep 60
- #wait for the reboot
- for((i=0;i<100;i++)); do pidof apache2 && break; sleep 1; done
+ . utils.sh; wait_for_reboot
 command5:
- LANG=de_DE.UTF-8 ucs-test -E dangerous -F junit -l "ucs-test.log"
+ . utils.sh; run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master070_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master070_IP]:test-reports .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master070_IP]:"/var/log/univention/{join,setup,listener}.log" .
